--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,67 @@
-alembic
-astroid
-blinker
-click
-dnspython
-dominate
-email-validator
-Flask
-Flask-Bootstrap
-Flask-Login
-Flask-Mail
-Flask-Migrate
-Flask-Script
-Flask-SimpleMDE
-Flask-SQLAlchemy
-Flask-Uploads
-Flask-WTF
-gunicorn
-idna
-isort
-itsdangerous
-Jinja2
-lazy-object-proxy
-Mako
-markdown2
-MarkupSafe
-mccabe
-psycopg2
-python-dateutil
-python-editor
-six
-SQLAlchemy
-toml
-typed-ast
-visitor
-Werkzeug
-wrapt
-WTForms
+alembic==1.5.8
+asgiref==3.3.0
+astroid==2.5.2
+blinker==1.4
+bootstrap4==0.1.0
+certifi==2020.11.8
+click==7.1.2
+cloudinary==1.23.0
+confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
+Django==3.1.3
+django-bootstrap3==14.2.0
+django-braces==1.14.0
+django-countries==6.1.3
+django-crispy-forms==1.10.0
+django-generic-aggregation==0.4.0
+django-heroku==0.3.1
+django-model-utils==4.0.0
+django-registration==3.1.1
+django-simple-ratings==0.3.3
+django-star-ratings==0.9.1
+django-tinymce==3.1.0
+djangorestframework==3.12.2
+dnspython==2.1.0
+dominate==2.6.0
+email-validator==1.1.2
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.7.0
+Flask-Script==2.0.6
+Flask-SimpleMDE==0.3.0
+Flask-SQLAlchemy==2.5.1
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.3
+greenlet==1.0.0
+gunicorn==20.0.4
+idna==3.1
+importlib-metadata==1.7.0
+isort==5.8.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lazy-object-proxy==1.6.0
+Mako==1.1.4
+markdown2==2.4.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+Pillow==8.0.1
+psycopg2==2.8.6
+python-dateutil==2.8.1
+python-decouple==3.3
+python-editor==1.0.4
+pytz==2020.4
+six==1.15.0
+SQLAlchemy==1.4.6
+sqlparse==0.4.1
+swapper==1.1.2.post1
+toml==0.10.2
+typed-ast==1.4.2
+urllib3==1.26.2
+visitor==0.1.3
+Werkzeug==1.0.1
+whitenoise==5.2.0
+wrapt==1.12.1
+WTForms==2.3.3
+zipp==3.4.0
